--- a/Research/testapp/src/App.css
+++ b/Research/testapp/src/App.css
@@ -16,7 +16,7 @@
 .App-header {
   background-color: #000000;
   min-height: 100vh;
-  display: f`
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
